# kombyphantike

./: .dockerignore  .gitignore  Dockerfile  README.md  arch.md  debug_key.py  debug_paradigms.py  debug_spacy.py  demo_audio_client.html  pyproject.toml  requirements.txt
data/: ai_instruction.txt  current_session.json  kombyphantike_worksheet.csv  user_progress.json
docs/: ARCHITECTURE.md  BIBLIOGRAPHY.md  MASTER_ROADMAP.md  README.md  ROADMAP.md  SETUP_GUIDE.md  SPRINT_PLAN.md
frontend_helpers/: paradigm_utils.ts
src/: analysis.py  api.py  app.py  audio.py  beta_code.py  companion.py  config.py  database.py  drill_generator.py  driller.py  enrichment.py  enrichment_el.py  enrichment_lsj.py  examiner.py  ingestion.py  ingestion_hybrid.py  knot_loader.py  kombyphantike.py  lemmatizer.py  lsj_fuzzy_indexer.py  main.py  models.py  noun_declension_extractor.py  philology.py  precompute_vectors.py  sync_sheets.py
tests/: setup_migration_13_test.py  test_api_draft.py  test_api_fill.py  test_api_fill_preservation.py  test_api_relations.py  test_audio_endpoint.py  test_audio_word.py  test_complexity_logic.py  test_database_relations.py  test_expand_word_pool.py  test_gemini_integration.py  test_get_relations.py  test_graph_structure.py  test_knot_context.py  test_kombyphantike_paradigms.py  test_list_paradigms.py  test_migration_10_logic.py  test_migration_11_apikey.py  test_migration_11_checkpoint.py  test_migration_12.py  test_migration_1c.py  test_migration_6.py  test_migration_7.py  test_paradigm_extractor_refactor.py  test_paradigm_fix.py  test_paradigm_linking.py  (+5 more)
(+26 files in other folders)
